src/global.scss
// http://ionicframework.com/docs/theming/
@import '~@ionic/angular/css/core.css';
@import '~@ionic/angular/css/normalize.css';
@import '~@ionic/angular/css/structure.css';
@import '~@ionic/angular/css/typography.css';
@import '~@ionic/angular/css/display.css';
@import '~@ionic/angular/css/padding.css';
@import '~@ionic/angular/css/float-elements.css';
@import '~@ionic/angular/css/text-alignment.css';
@import '~@ionic/angular/css/text-transformation.css';
@import '~@ionic/angular/css/flex-utils.css';

.full-size {
  width: 100%;
  height: 100%;
}

.full-width {
  width: 100%;
}

.mode-slider {
  width: 60%;
}

.menu {
  max-width: 300px !important;
}

.router {
  background: #fff;
}

.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
}

.animate-all {
  transition: all 0.5s ease;
}

